--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,7 +2,7 @@
     -webkit-box-shadow: 0px 4px 5px -5px rgba(0, 0, 0, 0.23);
     -moz-box-shadow: 0px 4px 5px -5px rgba(0, 0, 0, 0.23);
     box-shadow: 0px 4px 5px -5px rgba(0, 0, 0, 0.23);
-    background-color: rgb(213, 213, 213);
+    background-color: rgb(242, 242, 242);
     position: fixed;
     top: 0;
     width: 100%;
@@ -54,7 +54,7 @@
     cursor: pointer;
 }
 
-.hamburger-menu {
+/* .hamburger-menu {
     display: none;
     gap: 3rem;
 }
@@ -64,7 +64,7 @@
     font-size: 2.3rem;
     display: none;
     cursor: pointer;
-}
+} */
 .mobile-nav-full {
     background-color: #F3F3F3;
     z-index: 200;
