--- a/src/components/Popular.css
+++ b/src/components/Popular.css
@@ -136,13 +136,13 @@
 }
 
 .atc-btn {
-    background-color: transparent;
+    background-color: black;
+    color: white;
     border: 2px solid black !important;
 }
 
 .atc-btn:hover {
     color: rgb(0, 0, 0);
-    background-color: black;
 }
 
 .buy-btn {
