--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,7 +1,5 @@
 .navbar {
-    -webkit-box-shadow: 0px 4px 5px -5px rgba(0, 0, 0, 0.23);
-    -moz-box-shadow: 0px 4px 5px -5px rgba(0, 0, 0, 0.23);
-    box-shadow: 0px 4px 5px -5px rgba(0, 0, 0, 0.23);
+    box-shadow: 0px 4px 5px -5px rgba(0, 0, 0, 0.23); 
     background-color: rgb(242, 242, 242);
     position: fixed;
     top: 0;
@@ -21,18 +19,28 @@
     height: 8rem !important;
 }
 
-.navbar-fixed {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 12rem;
-}
-
 .logo-img {
     width: 8.5rem;
     height: auto;
     cursor: pointer;
 }
+
+.nav-center {
+    flex-grow: 1; 
+    display: flex;
+    justify-content: center;
+}
+
+.nav-title {
+    font-size: 3.5rem; 
+    color: #000000;
+    text-decoration: none;
+    text-transform: uppercase;
+    cursor: pointer;
+    font-weight: bold; 
+    text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.5); 
+}
+
 
 .nav-links {
     font-size: 1.8rem;
@@ -54,17 +62,6 @@
     cursor: pointer;
 }
 
-/* .hamburger-menu {
-    display: none;
-    gap: 3rem;
-}
-
-.hamburger-hamb,
-.hamburger-cart {
-    font-size: 2.3rem;
-    display: none;
-    cursor: pointer;
-} */
 .mobile-nav-full {
     background-color: #F3F3F3;
     z-index: 200;
@@ -103,7 +100,6 @@
     left: 50%;
     position: absolute;
     transform: translate(-50%, -50%);
-
 }
 
 .mobile-links a {
@@ -114,7 +110,6 @@
 .mobile-links a:hover {
     text-decoration: underline;
 }
-
 
 .cart-div {
     display: flex;
@@ -146,21 +141,18 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    cursor: pointer;
 }
 
 .cart-full-h2 {
     font-size: 2.1rem !important;
 }
 
-.cart-title-btn i {
-    font-size: 2.5rem;
-    cursor: pointer;
-}
-
 .cart-body {
     height: 100vh;
     padding: 0.5rem;
 }
+
 .empty-cart {
     display: flex;
     flex-direction: column;
@@ -168,6 +160,7 @@
     width: 16rem;
     margin: 15rem auto;
 }
+
 .empty-cart:hover {
     color: #ab2121;
 }
@@ -188,13 +181,11 @@
 
 .closed-cart {
     right: -100%;
-    
 }
 
 .open-cart {
     right: 0;
 }
-
 
 .full-cart {
     width: 100%;
@@ -221,14 +212,12 @@
     border-radius: 3px;
     background-color: #f2f2f2;
     cursor: pointer;
-
 }
 
 .cart-img {
     width: 100%;
     height: 100%;
     background-color: white;
-    
 }
 
 .cart-img img {
@@ -247,7 +236,6 @@
 
 .cart-btns {
     display: flex;
-    
 }
 
 .cart-btns button {
@@ -266,7 +254,6 @@
     width: 3rem;
     text-align: center;
     padding-top: 3.5px;
-    
 }
 
 .cart-name {
@@ -291,7 +278,6 @@
     position: relative;
     cursor: pointer;
 }
-
 .cart-icon::after {
     content: '';
     top: -18px;
@@ -306,7 +292,7 @@
     height: 10px;
     text-align: center;
     display: none;
-    
+    font-family: Verdana, Geneva, Tahoma, sans-serif; 
 }
 
 .cart-icon.with-items::after {
@@ -325,6 +311,7 @@
     display: flex;
     align-items: center;
     z-index: 999;
+    font-family: Verdana, Geneva, Tahoma, sans-serif; 
 }
 
 .subtotal-div {
@@ -371,7 +358,6 @@
 
     .hamburger-menu {
         display: flex;
-
     }
 
     .hamburger-cart,
@@ -382,7 +368,6 @@
     .cart-div {
         width: 100%;
     }
-
 }
 
 @media (max-width:420px) {
